# Helicopter

./: CMakeLists.txt  README.md
include/: bmptype.h
src/: main.cpp
